Fix: Ensure login button is always visible in nav and mobile menu

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                     </div>
                     
                     <!-- Login Button (shown when not logged in) -->
-                    <a href="/auth.html" id="login-link" class="btn-secondary">
+                    <a href="auth.html" id="login-link" class="btn-secondary" style="display: inline-flex !important;">
                         Login
                     </a>
                     
@@ -397,6 +397,9 @@
                 </div>
                 <a href="#resources" class="block py-2 text-medium-gray hover:text-ocean-blue transition-colors font-medium">Resources</a>
                 <a href="#sermons" class="block py-2 text-medium-gray hover:text-ocean-blue transition-colors font-medium">Sermons</a>
+                <a href="auth.html" id="mobile-login-link" class="btn-secondary w-full mb-3">
+                    Login
+                </a>
                 <button class="btn-primary w-full">
                     Give
                 </button>
